2006-06-20  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/Banshee.Burner/BurnerSource.cs:
	* src/Banshee.Plugins/Daap/DaapSource.cs: Implement new virtual method
	and properties for unmapping

2006-06-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* data/UIManagerLayout.xml: Rename the DeletePlaylist action to 
	UnmapSource.

	* src/PlayerInterface.cs: Use CanUnmap property of Sources to set
	visiblity of Unmap option in context menu.  Set the label of the rename
	and delete items with on the source's SourceType property.  Make the
	OnRename and OnUnmap handlers source-independent.

	* src/Banshee.Base/ActionManager.cs: Add the UnmapSourceAction to the
	list of global actions instead of to the PlaylistActions group.

	* src/Banshee.Base/Source.cs: Add virtual Unmap method and SourceType,
	and CanUnmap, UnmapLabel, and UnmapIcon properties.

	* src/Banshee.Base/Sources/DapSource.cs: 
	* src/Banshee.Base/Sources/PlaylistSource.cs: Implement new virtual
	method/properties.

2006-06-20  Aaron Bockover  <aaron@abock.org>

	* src/DragDrop.cs: Added ObjectToSelectionData and SelectionDataToObjects

	* src/PlayerInterface.cs: Let SourceView handle its own drag source/dests

	* src/SourceView.cs: Added internal DnD support; sources can be dropped
	on to other sources

	* src/Banshee.Base/Source.cs: Added SourceDrop virtual method and
	IsDragSource property to control source DnD

	* src/Banshee.Base/Banshee.Burner/BurnerSource.cs: Implement SourceDrop;
	playlists can be dropped on to the CD burning source

	* src/Banshee.Base/Sources/PlaylistSource.cs: Implement IsDragSource and
	SourceDrop; playlists can be dragged to other sources (including other
	playlists)

2006-06-19  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/Banshee.Burner/BurnerSource.cs: call default 
	constructor from IRecorder constructor

2006-06-19  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/Branding.cs: added Branding support that was 
	implemented on the stable branch
